[package]
name = "thordb"
description = "ThorDB is an in-memory relational database"
version = "0.0.1"
license = "MIT"
edition = "2018"

[dependencies]
arrow = "5.0"
bincode = "1.3"
datafusion = "4.0.0-SNAPSHOT"
env_logger = "0.9"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0", features = ["derive"] }
sqlparser = "0.9.0"
tokio = { version = "1", features = ["full"] }

